finally a tweeked swager with manyally modified integration tests to override all openapi-codegenration bugs and limitations
