# python-flask-server/openapi_server/models/__init__.py
@@ -4,4 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.area import Area
+from openapi_server.models.point3_d_dict import Point3DDict
 from openapi_server.models.props import Props
