# python-flask-server/openapi_server/models/area.py
@@ -6,10 +6,14 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
+from openapi_server.models.point3_d_dict import Point3DDict
 from openapi_server.models.props import Props
+import re
 from openapi_server import util
 
+from openapi_server.models.point3_d_dict import Point3DDict  # noqa: E501
 from openapi_server.models.props import Props  # noqa: E501
+import re  # noqa: E501
 
 class Area(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -17,36 +21,36 @@ class Area(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, name=None, date=None, properties=None, area=None):  # noqa: E501
+    def __init__(self, name=None, date=None, props=None, poly=None):  # noqa: E501
         """Area - a model defined in OpenAPI
 
         :param name: The name of this Area.  # noqa: E501
         :type name: str
         :param date: The date of this Area.  # noqa: E501
-        :type date: date
-        :param properties: The properties of this Area.  # noqa: E501
-        :type properties: Props
-        :param area: The area of this Area.  # noqa: E501
-        :type area: List[List]
+        :type date: str
+        :param props: The props of this Area.  # noqa: E501
+        :type props: Props
+        :param poly: The poly of this Area.  # noqa: E501
+        :type poly: List[Point3DDict]
         """
         self.openapi_types = {
             'name': str,
-            'date': date,
-            'properties': Props,
-            'area': List[List]
+            'date': str,
+            'props': Props,
+            'poly': List[Point3DDict]
         }
 
         self.attribute_map = {
             'name': 'name',
             'date': 'date',
-            'properties': 'properties',
-            'area': 'area'
+            'props': 'props',
+            'poly': 'poly'
         }
 
         self._name = name
         self._date = date
-        self._properties = properties
-        self._area = area
+        self._props = props
+        self._poly = poly
 
     @classmethod
     def from_dict(cls, dikt) -> 'Area':
@@ -86,9 +90,10 @@ class Area(Model):
     def date(self):
         """Gets the date of this Area.
 
+        Custom date  # noqa: E501
 
         :return: The date of this Area.
-        :rtype: date
+        :rtype: str
         """
         return self._date
 
@@ -96,61 +101,64 @@ class Area(Model):
     def date(self, date):
         """Sets the date of this Area.
 
+        Custom date  # noqa: E501
 
         :param date: The date of this Area.
-        :type date: date
+        :type date: str
         """
         if date is None:
             raise ValueError("Invalid value for `date`, must not be `None`")  # noqa: E501
+        if date is not None and not re.search(r'^\d{4}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])$', date):  # noqa: E501
+            raise ValueError("Invalid value for `date`, must be a follow pattern or equal to `/^\d{4}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])$/`")  # noqa: E501
 
         self._date = date
 
     @property
-    def properties(self):
-        """Gets the properties of this Area.
+    def props(self):
+        """Gets the props of this Area.
 
 
-        :return: The properties of this Area.
+        :return: The props of this Area.
         :rtype: Props
         """
-        return self._properties
+        return self._props
 
-    @properties.setter
-    def properties(self, properties):
-        """Sets the properties of this Area.
+    @props.setter
+    def props(self, props):
+        """Sets the props of this Area.
 
 
-        :param properties: The properties of this Area.
-        :type properties: Props
+        :param props: The props of this Area.
+        :type props: Props
         """
-        if properties is None:
-            raise ValueError("Invalid value for `properties`, must not be `None`")  # noqa: E501
+        if props is None:
+            raise ValueError("Invalid value for `props`, must not be `None`")  # noqa: E501
 
-        self._properties = properties
+        self._props = props
 
     @property
-    def area(self):
-        """Gets the area of this Area.
+    def poly(self):
+        """Gets the poly of this Area.
 
         Polygon not closed coordinates.  # noqa: E501
 
-        :return: The area of this Area.
-        :rtype: List[List]
+        :return: The poly of this Area.
+        :rtype: List[Point3DDict]
         """
-        return self._area
+        return self._poly
 
-    @area.setter
-    def area(self, area):
-        """Sets the area of this Area.
+    @poly.setter
+    def poly(self, poly):
+        """Sets the poly of this Area.
 
         Polygon not closed coordinates.  # noqa: E501
 
-        :param area: The area of this Area.
-        :type area: List[List]
+        :param poly: The poly of this Area.
+        :type poly: List[Point3DDict]
         """
-        if area is None:
-            raise ValueError("Invalid value for `area`, must not be `None`")  # noqa: E501
-        if area is not None and len(area) < 3:
-            raise ValueError("Invalid value for `area`, number of items must be greater than or equal to `3`")  # noqa: E501
+        if poly is None:
+            raise ValueError("Invalid value for `poly`, must not be `None`")  # noqa: E501
+        if poly is not None and len(poly) < 3:
+            raise ValueError("Invalid value for `poly`, number of items must be greater than or equal to `3`")  # noqa: E501
 
-        self._area = area
+        self._poly = poly
